<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/infoHeader"
                style="@style/infoHeaderText"
                android:text="RULES"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainText"
                style="@style/infoText"
                android:text="@string/rules1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoHeader" />

            <TextView
                android:id="@+id/text2"
                style="@style/infoText"
                android:text="@string/rules2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText" />

            <TextView
                android:id="@+id/mainText2"
                style="@style/infoText"
                android:text="@string/rules22"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text2" />

            <ImageView
                android:id="@+id/num"
                style="@style/infoImageFull"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText2"
                app:srcCompat="@drawable/example_1_2_3_7" />

            <TextView
                android:id="@+id/mainText3"
                style="@style/infoText"
                android:text="@string/rules3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/num" />

            <TextView
                android:id="@+id/mainText5"
                style="@style/infoText"
                android:text="@string/rules5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText3" />

            <ImageView
                android:id="@+id/settings"
                style="@style/infoImageFull"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText5"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:id="@+id/mainText4"
                style="@style/infoText"
                android:text="@string/rules4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings" />

            <TextView
                android:id="@+id/mainText6"
                style="@style/infoText"
                android:text="@string/rules6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText4" />

            <TextView
                style="@style/infoText"
                android:paddingBottom="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText6" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/outline_arrow_back_purple_18dp"
        app:backgroundTint="@color/evenLighterPurple" />
</android.support.design.widget.CoordinatorLayout>