<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/infoHeader"
                style="@style/infoHeaderText"
                android:text="LEVELS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainText"
                style="@style/infoText"
                android:text="@string/level_text2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoHeader" />

            <ImageView
                android:id="@+id/num0"
                style="@style/infoImageClip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText"
                app:srcCompat="@drawable/level_add_subtract" />

            <TextView
                android:id="@+id/addOnText"
                style="@style/infoText"
                android:text="@string/add_selected_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/num0" />

            <ImageView
                android:id="@+id/num2MainImage"
                style="@style/infoImageFull"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addOnText"
                app:srcCompat="@drawable/level_add_main" />

            <ImageView
                android:id="@+id/num1"
                style="@style/infoImageClip"
                android:paddingTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/num2MainImage"
                app:srcCompat="@drawable/level_multiply_divide" />

            <TextView
                android:id="@+id/powerOffText"
                style="@style/infoText"
                android:text="@string/multiply_selected_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/num1" />

            <ImageView
                android:id="@+id/numDice3MainImage"
                style="@style/infoImageFull"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/powerOffText"
                app:srcCompat="@drawable/level_multiply_main" />

            <ImageView
                android:id="@+id/num2"
                style="@style/infoImageClip"
                android:paddingTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numDice3MainImage"
                app:srcCompat="@drawable/level_powers_roots" />

            <TextView
                android:id="@+id/powerOnText"
                style="@style/infoText"
                android:text="@string/powers_selected_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/num2" />

            <TextView
                android:id="@+id/mainText2"
                style="@style/infoText"
                android:text="@string/roots_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/powerOnText" />

            <TextView
                android:id="@+id/mainText3"
                style="@style/infoText"
                android:textColor="@color/lightRed"
                android:text="@string/powers_selected_text_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText2" />

            <ImageView
                android:id="@+id/numDice2MainImage"
                style="@style/infoImageFull"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainText3"
                app:srcCompat="@drawable/level_powers_main" />

            <TextView
                style="@style/infoText"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numDice2MainImage" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/outline_arrow_back_purple_18dp"
        app:backgroundTint="@color/evenLighterPurple" />
</android.support.design.widget.CoordinatorLayout>